# sqlillo-royale

./: .gitignore  Makefile  README.md  TODO  TODO.md  create_users.py  docker-compose.yml  main.c
api/: .gitignore  Dockerfile  README.md  api.go  auth_handlers.go  go.mod  go.sum  main.go  mock_db.go  open_handlers.go  private_handlers.go  public_handlers.go  ranking_cron.go  types.go  user.go  user_test.go  util_handlers.go  utils.go
api/migrations/: 1_rel_table_rank.sql  2_ranking_table_index.sql  3_add_round_to_game.sql  4_fml.sql
canvas-renderer/: index.html  package.json
canvas-renderer/src/: main.ts  style.css
docs/: docs.md
infra/: concourse.nomad  hello-world.yml  runner.nomad  sqlillo.nomad  sqlillo.yml
infra/ci/: alerts.yml  sqlillo.yml
infra/nomad/: concourse.nomad  sqlillo.nomad
mi/: .gitignore  README.md  index.html  package.json  traces.json  vite.config.ts
mi/src/: API.ts  App.tsx  Router.tsx  Routes.ts  ext.d.ts  main.tsx
mmz/: .gitignore  BUILD  Dockerfile  Makefile  README.md  build-debug.sh  build.sh  example.lua  main.c  mmz  mmz-bin  player_code.lua  profile.coz  sample_code.lua  test  test.sh  upload.py
mmz/files/: player_code.lua  x.lua  y.lua
server/: .envrc  Dockerfile  Makefile  TestingDockerfile  main.py  pyproject.toml  test_server.py
server/migrations/: 1_create_user_table.sql  2_create_code_table.sql
shi/: Cargo.toml  README.md  build.rs
shi/proto/: shi.proto
shi/src/: README.md  main.rs  schema.rs
sqlillo/: .gitignore  Dockerfile  README.md  mix.exs
test-server/: docker-compose.yml  main.py  pyproject.toml
(+169 files in other folders)
